--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@
 # REACT_APP_API_URL=https://policerecruitmentapi.initialinfinity.com/api/
 # REACT_APP_API_URL=https://policerecruitmentapi.azurewebsites.net/api/
 
-REACT_APP_API_URL=https://devitpolicerecruitmentapi-esftdxf7gua7fffn.centralindia-01.azurewebsites.net/api/
+# REACT_APP_API_URL=https://devitpolicerecruitmentapi-esftdxf7gua7fffn.centralindia-01.azurewebsites.net/api/
